syntax = "proto3";

message ConnectResponse {
    string message = 1;
    string status = 2;
}

message ConnectRequest {
    string clientID = 1;
}

service StreamConnectionService {
    rpc ForceConnect (ConnectRequest) returns (ConnectResponse) {}
    rpc ForceDisconnect (ConnectRequest) returns (ConnectResponse) {}
}
